--- a/GeneralStoreMVC/GeneralStoreMVC.csproj
+++ b/GeneralStoreMVC/GeneralStoreMVC.csproj
@@ -175,6 +175,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202106221436422_InitialCreate.cs" />
+    <Compile Include="Migrations\202106221436422_InitialCreate.Designer.cs">
+      <DependentUpon>202106221436422_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106221750376_InitialMigration.cs" />
+    <Compile Include="Migrations\202106221750376_InitialMigration.Designer.cs">
+      <DependentUpon>202106221750376_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -245,6 +254,10 @@
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Customer\Create.cshtml" />
     <Content Include="Views\Customer\Delete.cshtml" />
+    <Content Include="Views\Customer\Edit.cshtml" />
+    <Content Include="Views\Customer\Details.cshtml" />
+    <Content Include="Views\Product\Edit.cshtml" />
+    <Content Include="Views\Product\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -261,6 +274,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202106221436422_InitialCreate.resx">
+      <DependentUpon>202106221436422_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106221750376_InitialMigration.resx">
+      <DependentUpon>202106221750376_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
